--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -31,5 +31,7 @@
     "logout": "دەرچوون",
     "friends": "هاوڕێکان",
     "friend_requests": "داخوازینامە هاوڕێییەکان",
-    "add_friend": "زیادکردنی هاوڕێ"
+    "add_friend": "زیادکردنی هاوڕێ",
+    "global": "گشتی",
+    "home": "ماڵەوە"
 }
