--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -33,5 +33,9 @@
     "friend_requests": "داخوازینامە هاوڕێییەکان",
     "add_friend": "زیادکردنی هاوڕێ",
     "global": "گشتی",
-    "home": "ماڵەوە"
+    "home": "ماڵەوە",
+    "no_ppl_found": "هیچ کەسێک نەدۆزرایەوە...",
+    "message": "نامەناردن",
+    "unfriend": "عاجزبوون",
+    "block": "بلۆککردن"
 }
