--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -33,5 +33,9 @@
     "friend_requests": "Friend Requests",
     "add_friend": "Add Friend",
     "global": "Global",
-    "home": "Home"
+    "home": "Home",
+    "no_ppl_found": "No people found...",
+    "message": "Message",
+    "unfriend": "Unfriend",
+    "block": "Block"
 }
