--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -37,5 +37,9 @@
     "no_ppl_found": "No people found...",
     "message": "Message",
     "unfriend": "Unfriend",
-    "block": "Block"
+    "block": "Block",
+    "accept": "Accept",
+    "reject": "Reject",
+    "send_request": "Send Request",
+    "copy_id": "Copy ID"
 }
