--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -37,5 +37,9 @@
     "no_ppl_found": "هیچ کەسێک نەدۆزرایەوە...",
     "message": "نامەناردن",
     "unfriend": "عاجزبوون",
-    "block": "بلۆککردن"
+    "block": "بلۆککردن",
+    "accept": "ڕازیبوون",
+    "reject": "ڕەفزکردن",
+    "send_request": "داخوازی ناردن",
+    "copy_id": "کۆپی ID"
 }
