--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -41,5 +41,7 @@
     "accept": "ڕازیبوون",
     "reject": "ڕەفزکردن",
     "send_request": "داخوازی ناردن",
-    "copy_id": "کۆپی ID"
+    "copy_id": "کۆپی ID",
+    "active_now": "لەسەر هێڵە",
+    "type_a_msg": "نامەیەک بنووسە..."
 }
