--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -47,5 +47,6 @@
     "do_u_wanna_unfriend": "دەتەوێت عاجزبیت لەگەڵی؟",
     "do_u_wanna_block": "دەتەوێت بلۆکی بکەیت؟",
     "copied_to_clipbrd": "بە سەرکەوتوویی کۆپی کرا",
-    "ok": "باشە"
+    "ok": "باشە",
+    "slide_to_cancel": "پەنجە لابەرە بۆ گەڕانەوە"
 }
