--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -48,5 +48,8 @@
     "do_u_wanna_block": "Do you want to block?",
     "copied_to_clipbrd": "Copied to clipboard",
     "ok": "Okay",
-    "slide_to_cancel": "Slide to cancel"
+    "slide_to_cancel": "Slide to cancel",
+    "choose_cam_way": "Choose camera way...",
+    "photo": "Photo",
+    "video": "Video"
 }
