--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -48,5 +48,8 @@
     "do_u_wanna_block": "دەتەوێت بلۆکی بکەیت؟",
     "copied_to_clipbrd": "بە سەرکەوتوویی کۆپی کرا",
     "ok": "باشە",
-    "slide_to_cancel": "پەنجە لابەرە بۆ گەڕانەوە"
+    "slide_to_cancel": "پەنجە لابەرە بۆ گەڕانەوە",
+    "choose_cam_way": "شێوەی کامێرا دیاری بکە...",
+    "photo": "ڕەسم",
+    "video": "ڤیدیۆ"
 }
