--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -62,5 +62,22 @@
     "delete_acc": "هەژمار سڕینەوە",
     "deletes_the_acc": "هەژمارەکەت بۆ هەتاهەتایی دەسڕێتەوە...",
     "change_lang": "زمان گۆڕین",
-    "changes_the_lang": "زمانی ئەپەکە دەگۆڕێت..."
+    "changes_the_lang": "زمانی ئەپەکە دەگۆڕێت...",
+    "usercantempty": "ناوی بەکارهێنەر نابێت بەتاڵ ببێت!",
+    "usermore2letters": "ناوی بەکارهێنەر دەبێت لە ٢ پیت زیاتربێت!",
+    "emailcantempty": "ئیمەیڵەکە نابێت بەتاڵ ببێت!",
+    "emailinvalid": "ئەو ئیمەیڵەی دراوە دروست نییە!",
+    "passcantempty": "تێپەڕە وشە نابێت بەتاڵ ببێت!",
+    "passmore7letters": "تێپەڕە وشە دەبێت لە ٧ پیت زیاتربێت!",
+    "passweak": "ئەم تێپەڕە وشەیە ئاسان مەزندە دەکرێت!",
+    "userexists": "بەکارهێنەرێکی تر هەیە بەهەمان ناوی بەکارهێنەر!",
+    "emailexists": "بەکارهێنەرێکی تر هەیە بەهەمان ئیمەیڵ!",
+    "selecturgender": "ڕەگەزت دیاری بکە!",
+    "fncantempty": "ناوت نابێت بەتاڵ ببێت!",
+    "fnmore2letters": "ناوت دەبێت لە ٢ پیت زیاتربێت!",
+    "lncantempty": "ناوی باوکت نابێت بەتاڵ ببێت!",
+    "lnmore2letters": "ناوی باوکت دەبێت لە ٢ پیت زیاتربێت!",
+    "userdoesntexist": "ئەم بەکارهێنەرە بوونی نیە!",
+    "userdisabled": "ئەم بەکارهێنەرە ناچالاک کراوە!",
+    "wrongpass": "تێپەڕە وشەیەکەی هەڵەت لێداوە!"
 }
