--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -34,7 +34,6 @@
     "add_friend": "Add Friend",
     "global": "Global",
     "home": "Home",
-    "no_ppl_found": "No people found...",
     "message": "Message",
     "unfriend": "Unfriend",
     "block": "Block",
@@ -79,5 +78,27 @@
     "lnmore2letters": "Last name must be more than 2 letters!",
     "userdoesntexist": "This user does not exist!",
     "userdisabled": "This user has been disabled!",
-    "wrongpass": "The password is incorrect!"
+    "wrongpass": "The password is incorrect!",
+    "request_sent": "Request Sent",
+    "searchforppl": "Search for people...",
+    "nopplfound": "No people found...",
+    "norqestyet": "No requests yet...",
+    "accepted": "Accepted",
+    "rejected": "Rejected",
+    "nofriendsyet": "No friends yet...",
+    "searchforfriends": "Search for friends...",
+    "nofriendsfound": "No friends found...",
+    "newusrname": "New username",
+    "confirm": "Confirm",
+    "usercantold": "Please type a new username!",
+    "newpasswd": "New password",
+    "oldpasswd": "Old password",
+    "newpasscantold": "New password cannot be old password!",
+    "toomanylogs": "Too many login fails!",
+    "creatingacc": "Creating account... Please wait",
+    "uploadingimage": "Uploading image... Please wait",
+    "deletingacc": "Deleting account... Please wait",
+    "do_u_wanna_delete_acc": "Do you want to delete your account?",
+    "typeurpasswd": "Type your password",
+    "plztypeurpass": "Please type your password"
 }
