--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -34,7 +34,6 @@
     "add_friend": "زیادکردنی هاوڕێ",
     "global": "گشتی",
     "home": "ماڵەوە",
-    "no_ppl_found": "هیچ کەسێک نەدۆزرایەوە...",
     "message": "نامەناردن",
     "unfriend": "عاجزبوون",
     "block": "بلۆککردن",
@@ -79,5 +78,27 @@
     "lnmore2letters": "ناوی باوکت دەبێت لە ٢ پیت زیاتربێت!",
     "userdoesntexist": "ئەم بەکارهێنەرە بوونی نیە!",
     "userdisabled": "ئەم بەکارهێنەرە ناچالاک کراوە!",
-    "wrongpass": "تێپەڕە وشەیەکەی هەڵەت لێداوە!"
+    "wrongpass": "تێپەڕە وشەیەکەی هەڵەت لێداوە!",
+    "request_sent": "داخوازی نێردرا",
+    "searchforppl": "بگەڕێ بۆ خەڵک...",
+    "nopplfound": "هیچ کەسێک نەدۆزرایەوە...",
+    "norqestyet": "هیچ داواکارییەک نەهاتووە...",
+    "accepted": "ڕازیبوویت",
+    "rejected": "ڕەفزتکرد",
+    "nofriendsyet": "هیچ هاوڕێیەکت نییە...",
+    "searchforfriends": "بگەڕێ بۆ هاوڕێکانت...",
+    "nofriendsfound": "هیچ هاوڕێیەک نەدۆزرایەوە...",
+    "newusrname": "ناوی بەکارهێنەری نوێ",
+    "confirm": "تەواو",
+    "usercantold": "تکایە ناوی بەکارهێنەری نوێ بنووسە!",
+    "newpasswd": "تێپەڕە وشەی نوێ",
+    "oldpasswd": "تێپەڕە وشەی کۆن",
+    "newpasscantold": "تێپەڕە وشەی نوێ نابێت تێپەڕە وشەی کۆن ببێت!",
+    "toomanylogs": "تێپەڕە وشەی هەڵەی زۆرت لێداوە!",
+    "creatingacc": "دروستکردنی هەژمار... تکایە چاوەڕێبکە",
+    "uploadingimage": "گۆڕینی وێنە... تکایە چاوەڕێبکە",
+    "deletingacc": "سڕینەوەی هەژمار... تکایە چاوەڕێبکە",
+    "do_u_wanna_delete_acc": "دەتەوێت هەژمارەکەت بسڕیتەوە؟",
+    "typeurpasswd": "تێپەڕە وشەکەت بنووسە",
+    "plztypeurpass": "تکایە تێپەڕە وشەکەت بنووسە"
 }
